--- a/package.json
+++ b/package.json
@@ -474,6 +474,7 @@
     "minimist": "^1.2.8",
     "minipass": "^7.0.4",
     "mkdirp": "^0.5.6",
+    "mongoose": "^6.12.5",
     "ms": "^2.1.2",
     "multicast-dns": "^7.2.5",
     "mz": "^2.7.0",
